# services-devices

./: Cargo.toml  README.md  check_devices.txt
src/: main.rs
