[package]
name = "devmgr"
version = "0.1.0"
edition = "2021"
description = "Device Manager Service - Redstone OS"

[[bin]]
name = "devmgr"
path = "src/main.rs"
test = false
bench = false

[dependencies]
redpowder = { path = "../../redpowder" }

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
